--- a/Samples/Blazor/Hoard.SampleWeb/Pages/FetchData.razor
+++ b/Samples/Blazor/Hoard.SampleWeb/Pages/FetchData.razor
@@ -41,7 +41,7 @@ else
             <tr>
                 <td><input type="date" @bind="recordedDate" /></td>
                 <td><input type="number" min="-20" max="55" @bind="tempuratureRecorded" /></td>
-                <td><input type="button" value="Submit Reading" onclick=@SubmitNewReading /></td>
+                <td><input type="button" value="Submit Reading" @onclick=SubmitNewReading /></td>
                 <td>&nbsp;</td>
             </tr>
         </tbody>
@@ -49,7 +49,7 @@ else
     <p>Submitting reading <em>@tempuratureRecorded</em> on the <em>@recordedDate</em></p>
 }
 
-@functions {
+@code {
     List<WeatherForecast> forecasts;
     IReadOnlyCollection<ForecastState> state;
     IDisposable subscription;
@@ -78,7 +78,7 @@ else
         }
     }
 
-    protected override async Task OnInitAsync()
+    protected override async Task OnInitializedAsync()
     {
         await forecastStore.Initialise();
 
