--- a/Samples/Blazor/Hoard.SampleWeb/Pages/Counter.razor
+++ b/Samples/Blazor/Hoard.SampleWeb/Pages/Counter.razor
@@ -1,6 +1,7 @@
 @using Hoard.SampleLogic.Counter
 @using F3N.Hoard.Extensions
 @using F3N.Hoard.State
+@using Microsoft.AspNetCore.ProtectedBrowserStorage
 
 @inject CounterStore counterStore;
 
@@ -26,9 +27,9 @@
     {
         await counterStore.Initialise();
 
-        subscription = counterStore.Observe().Subscribe((s) =>
+        subscription = counterStore.Observe().Subscribe(async (s) =>
         {
-            currentCount = s.Count;
+          currentCount = s.Count;
         });
 
         state = counterStore.CurrentState;
